test/good/arrays/comprehension10.px

print [for x in 5...1 by -1 if x < 4 yield [for y in 1..x yield [for z in y..y yield z]]]
