test/bad/arrays/comprehension15.px

[for _ in [] yield [] by -1]
